# maludb-terminal

./: AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: ubuntu.md
scripts/: package-release.ps1  package-release.sh  update-homebrew-formula.sh
src/: lib.rs  llm.rs  main.rs  mcp.rs  skills.rs
tests/: cli.rs  mcp.rs  release_scripts.rs
