[package]
name = "malu"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/maludb/maludb-terminal"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
directories = "6.0.0"
keyring = "4.0.1"
keyring-core = "1.0.0"
mime_guess = "2.0.5"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "multipart", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
mockito = "1.7.2"
predicates = "3.1.4"
tempfile = "3.27.0"
