[package]
name = "maludb"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/maludb/maludb-terminal"

# `cargo binstall maludb` downloads the prebuilt release artifacts produced by
# .github/workflows/release.yml instead of compiling from source.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/maludb-{ version }-{ target }{ archive-suffix }"
bin-dir = "maludb-{ version }-{ target }/bin/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
directories = "6.0.0"
keyring = "4.0.1"
keyring-core = "1.0.0"
mime_guess = "2.0.5"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "multipart", "query", "rustls"] }
rpassword = "7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
mockito = "1.7.2"
predicates = "3.1.4"
tempfile = "3.27.0"
